# Vision_Module

./: .gitignore  Document.md  README.md  start.sh
src/decision/: CMakeLists.txt  package.xml
src/decision/src/: decision_node.cpp
src/detector/: CMakeLists.txt  package.xml
src/detector/camera_calibration/: CMakeLists.txt  VID5.xml  in_VID5.xml  out_camera_data.xml
src/detector/imgs/: 4.avi
src/detector/include/: Extended_KF.hpp  SerialPort.hpp  armor.hpp  checksum.hpp  coord_transformer.hpp  detector.hpp  detector_wrapper.hpp  gimbal_control.hpp  hikrobot_camera.hpp  number_classifier.hpp  tracker.hpp  tracker_wrapper.hpp  trajectory.hpp
src/detector/launch/: predictor.launch  predictor.rviz
src/detector/msg/: Armor.msg  Target.msg  TargetCommand.msg
src/detector/params/: camera.yaml  gimbal.yaml
src/detector/params/camera/: hero.yaml  sentry_left.yaml  sentry_right.txt  sentry_right.yaml
src/detector/params/gimbal/: hero_or_standard.yaml  sentry.yaml
src/detector/src/: .tf_node.cpp.swp  Extended_KF.cpp  SerialPort.cpp  coord_transformer.cpp  detector.cpp  detector_node.cpp  detector_wrapper.cpp  gimbal_control.cpp  number_classifier.cpp  tf_node.cpp  tracker.cpp  tracker_node.cpp  tracker_wrapper.cpp  trajectory.cpp
src/detector/video/: Video_20230805131000004.avi
